syntax = "proto3";
package protos;
import "base.proto";

// ///默认每个turn翻地图块次数
// pub static TURN_DEFAULT_OPEN_CELL_TIMES: u8 = 2;

// ///被动触发效果类型
// pub enum TriggerEffectType {
//     ///触发buff
//     此处等同于EffectType
// }
//
// //技能消耗类型
// pub enum SkillConsumeType {
//     Energy = 1, //能量
// }
//
// ///回合行为类型
// #[derive(Clone, Debug, PartialEq)]
// pub enum BattleCterState {
//     Alive = 0,
//     Die = 1,
// }

// ///效果类型
// pub enum EffectType {
//     SkillDamage = 1,             //技能伤害
//     AttackDamage = 2,            //攻击伤害
//     Cure = 3,                    //治疗血量
//     SubDamage = 4,               //减攻击伤害
//     SubSkillCd = 5,              //技能减少cd
//     RewardItem = 6,              //获得道具
//     AddSkillCd = 7,              //增加技能cd
//     AddEnergy = 8,               //增加能量
//     AddSkill = 9,                //增加技能
//     RefreshSkillCd = 10,         //刷新技能cd
// }
//
//
// ///回合行为类型
// #[derive(Clone, Debug, PartialEq)]
// pub enum ActionType {
//     None = 0,                    //无效值
//     Attack = 1,                  //普通攻击
//     UseItem = 2,                 //使用道具
//     Skip = 3,                    //跳过turn
//     Open = 4,                    //翻块
//     Skill = 5,                   //使用技能
//     Buff = 6,                    //触发buff
//     EndShowMapCell = 7,          //结束展示地图块(解锁玩家状态)
// }

// ///目标类型枚举
// pub enum TargetType {
//     None = 0,                    //无效目标
//     Cell = 1,                    //地图块
//     AnyPlayer = 2,               //任意玩家
//     PlayerSelf = 3,              //玩家自己
//     AllPlayer = 4,               //所有玩家
//     OtherAllPlayer = 5,          //除自己外所有玩家
//     OtherAnyPlayer = 6,          //除自己外任意玩家
//     UnOpenCell = 7,              //未翻开的地图块
//     UnPairCell = 8,              //未配对的地图块
//     NullCell = 9,                //空的地图块，上面没人
//     UnPairNullCell = 10,         //未配对的地图块
//     CellPlayer = 11,             //地图块上的玩家
// }
//
// ///元素类型
// pub enum ElementType {
//     Nature = 1, //生命元素
//     Earth = 2,  //土元素
//     Water = 3,  //水元素
//     Fire = 4,   //火元素
// }



//行动请求
//cmd=20031
message C_ACTION{
    uint32 action_type = 1;//行动类型 可以是使用技能，可以是普通攻击,可以是使用道具
    uint32 value = 2;//行动对应类型的值
    repeated uint32 target_index = 3;//目标 可以是块，可以是玩家，可以是自己
}

//战斗开始通知
//cmd=10030
message S_BATTLE_START_NOTICE{
    repeated BattleCharacterPt battle_cters = 1;//战斗角色数据
    string map_data = 2;//地图数据
}

//行动推送
//cmd=10031
message S_ACTION_NOTICE{
    repeated ActionUnitPt action_uints = 1;//行动单位
}

//turn玩家状态结算，turn开始的时候
//cmd = 10032
message S_BATTLE_TURN_NOTICE{
    uint32 user_id = 1;//当前turn的玩家id
    repeated BattleCharacterPt cters = 2;//所有玩家角色
    repeated CellBuffPt cell_buffs = 3;//地图块上的buff
}

//架势请求
//cmd = 20032
message C_POS{
    uint32 type = 1;//1:切换架势，2:取消架势
    uint32 skill_id = 2;//技能id
}

//架势请求
//cmd = 10033
message S_POS_NOTICE{
    uint32 user_id = 1;//玩家ID
    uint32 type = 2;//1:切换架势，2:取消架势
    uint32 skill_id = 3;//技能id
}

//地图刷新推送
//cmd = 10040
message S_MAP_REFRESH_NOTICE{
    uint32 room_status = 1;//房间状态
    uint32 tile_map_id = 2;//地图配置id
    repeated WorldCellPt world_cell = 3;//世界块
}

//结算推送
//cmd=10041
message S_SUMMARY_NOTICE{
    repeated SummaryDataPt summary_datas = 1;//数据
}